[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/skybox_sideHills.png" type="Texture" id=1]
[ext_resource path="res://sprites/dirt_grass.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Trunk.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://sprites/Grave.png" type="Texture" id=6]

[node name="Game" type="Node"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 352.105 ]
}
trunk_scene = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 362.935, 624.072 )
scale = Vector2( 2.74621, 2.74621 )
z_index = -10
texture = ExtResource( 1 )

[node name="Ground" type="Node2D" parent="."]
position = Vector2( 352, 1216 )
__meta__ = {
"_edit_group_": true
}

[node name="Tile" type="Sprite" parent="Ground"]
position = Vector2( -320, 0 )
texture = ExtResource( 2 )

[node name="Tile2" type="Sprite" parent="Ground"]
position = Vector2( -192, 0 )
texture = ExtResource( 2 )

[node name="Tile3" type="Sprite" parent="Ground"]
position = Vector2( -64, 0 )
texture = ExtResource( 2 )

[node name="Tile4" type="Sprite" parent="Ground"]
position = Vector2( 64, 0 )
texture = ExtResource( 2 )

[node name="Tile5" type="Sprite" parent="Ground"]
position = Vector2( 192, 0 )
texture = ExtResource( 2 )

[node name="Tile6" type="Sprite" parent="Ground"]
position = Vector2( 320, 0 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 495.313, 1001.03 )

[node name="FirstTrunkPosition" type="Position2D" parent="."]
position = Vector2( 350.895, 1054.26 )

[node name="Grave" type="Sprite" parent="."]
visible = false
position = Vector2( 494.171, 1060.73 )
texture = ExtResource( 6 )

[node name="TimeLeft" type="ProgressBar" parent="."]
modulate = Color( 0.917647, 0.894118, 0.894118, 1 )
margin_left = 152.183
margin_top = 300.0
margin_right = 552.183
margin_bottom = 380.0
max_value = 5.0
step = 1.0
value = 5.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
